# spyfu-bulk-urls

./: 1000.0) + 0.01  LICENSE  README.md  output.json  pyproject.toml  requirements.txt
config/settings.example.json src/config/: settings.json
data/: sample_output.json
docs/: api-reference.md  usage.md
src/: cli.py  runner.py
src/config/: logging.conf  settings.example.json
src/outputs/: exporters.py  schema_validator.py
src/parsers/: html_parser.py  json_normalizer.py
src/processors/: ads_processor.py  competitors_processor.py  domain_stats_processor.py  keywords_processor.py
src/services/: proxy_manager.py  request_throttler.py  spyfu_client.py
tests/: test_competitors_processor.py  test_domain_stats_processor.py  test_keywords_processor.py
